objects/ccrz__E_PriceList__c.object
<CustomObject>
    <description>Represents a grouping of products to control pricing and entitlements.  The B2B Commerce pricelist object controls both pricing and entitlements, but can be used just for the purposes of entitlements. A list needs to be created for each currency that needs to be represented, allowing for different entitlments and pricing based on the locale and currency.</description>
    <fields>
        <fullName>ccrz__CurrencyISOCode__c</fullName>
        <description>Required - The 3-character ISO currency code corresponding to this list. For example, USD</description>
        <label>Currency ISO Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CustomerTypeCode__c</fullName>
        <label>Customer Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__DataId__c</fullName>
        <description>B2B Commerce internal use only except when used with ccApiTestData.</description>
        <externalId>true</externalId>
        <inlineHelpText>B2B Commerce internal use only except when used with ccApiTestData.</inlineHelpText>
        <label>DataId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Desc__c</fullName>
        <description>A description of the pricelist - internal only</description>
        <label>Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag determining whether or not this pricelist record is active</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__EndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>The date on which the pricelist is no longer active.  For example, if the EndDate__c is set to July 1, 2015 then the last date that this price list is valid will be June 30, 2015.</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__PricelistId__c</fullName>
        <description>External reference id for this entry</description>
        <externalId>true</externalId>
        <label>Pricelist Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Seller this Price List belongs to.</description>
        <label>Seller</label>
        <referenceTo>ccrz__E_Seller__c</referenceTo>
        <relationshipLabel>CC Price Lists</relationshipLabel>
        <relationshipName>E_PriceLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The start date for which this pricelist record is active. This is the first date the pricing/entitlements will be applied</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>Mulit-select list that allows you to assign the pricelist to one or more storefronts.</description>
        <label>Storefront</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DefaultStore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__SupplierKey__c</fullName>
        <description>Deprecated</description>
        <label>Supplier Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Price List</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Desc__c</columns>
        <columns>ccrz__CustomerTypeCode__c</columns>
        <columns>ccrz__PricelistId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ccrz__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Price Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>